<resources>
    <string name="app_name">LSR</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">Global</string>
    <string name="wol_header">Wake On LAN</string>
    <string name="ssh_header">SSH</string>

    <!-- General Preferences -->
    <string name="ip_title">Server IP</string>

    <!-- WOL Preferences -->
    <string name="mac_title">MAC</string>

    <!-- SSH Preferences -->
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="command_title">Command</string>
    <string name="ssh_port_title">SSH Port</string>
    <string name="status_header">Status</string>
    <string name="status_port_title">Status Port</string>
    <string name="slug_title">Slug</string>
    <string name="wol_ip">WOL IP (if different)</string>
</resources>