<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <EditTextPreference
            app:key="ip"
            app:title="@string/ip_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/wol_header">

        <EditTextPreference
            app:key="mac"
            app:title="@string/mac_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory

        app:title="@string/ssh_header" >
        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference

            app:key="password"
            app:title="@string/password_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference

            app:key="command"
            app:title="@string/command_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>